# GAIA_HR

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  errorfile.py  example.py  hello.txt  new_file.py  plotting.py  plottingfunction.py  pyproject.toml  requirements.txt  test.py
GAIA_HR/: Sample_data_both_table.csv  plot.c  plot.cpp  plot.py  plotting.py  plottingfunction.py  query.py  query_all.ipynb  query_all.py  query_all_utils.py
GAIA_HR.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Project/: Sample_data_both_table.csv  query_all.ipynb  query_test.ipynb  test.py  testing_gaia.ipynb
docs/: conf.py  index.rst  plot.rst  query.rst
docs/_build/doctrees/: environment.pickle  index.doctree  plot.doctree  query.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  plot.html  py-modindex.html  query.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  plot.doctree  query.doctree
docs/_build/html/_sources/: index.rst.txt  plot.rst.txt  query.rst.txt
test/: test_GAIA_HR.py
