[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GAIA_HR"
version = "1.1.0"
description = "Python package to plot Hertzsprung-Russel diagrams from gdr3 data"
readme = "README.md"

dependencies = [
  "numpy",
  "matplotlib",
  "astroquery",
  "pyvo",
  "pandas"
]
authors = [
  {name = "Midhun Goutham Murali", email = "midhungm8101@gmail.com"},
  {name = "Nirmal US", email = "nirmalus24@gmail.com"},
  {name = "Anansh Jain", email = "ananshjain10@gmail.com"},
]
